--- a/libs/ui/src/lib/components/heading.module.css
+++ b/libs/ui/src/lib/components/heading.module.css
@@ -1,7 +1,7 @@
 .heading-1,
 .heading-2,
 .heading-3 {
-  color: rgba(55, 65, 81, 1);
+  color: inherit;
   font-weight: 500;
   letter-spacing: -0.025em;
   line-height: 1;
@@ -16,5 +16,5 @@
 }
 
 .heading-3 {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
